feat: create godoc for register and login with method GET
